--- a/KamleonApp/app/src/main/res/values/colors.xml
+++ b/KamleonApp/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
 
     <color name="white93">#EEFFFFFF</color>
     <color name="white80">#CCFFFFFF</color>
+    <color name="white50">#80FFFFFF</color>
     <color name="white40">#66FFFFFF</color>
     <color name="white30">#4DFFFFFF</color>
     <color name="white05">#0DFFFFFF</color>
