--- a/KamleonApp/app/src/main/res/layout/activity_home.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_home.xml
@@ -29,23 +29,31 @@
         <ImageView
             android:id="@+id/im_home_kamleon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             app:srcCompat="@drawable/kamleon"
             android:background="@color/transparent"
-            android:scaleType="centerCrop"
+            android:scaleType="fitStart"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="@dimen/nav_back_button_left"
-            android:layout_marginTop="@dimen/nav_back_button_top"/>
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="58dp"
-            android:layout_height="58dp"
-            android:src="@drawable/img_circle_profile"
-            android:id="@+id/iv_home_profile"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="18dp"/>
+        <androidx.cardview.widget.CardView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="@dimen/nav_back_button_left"
-            android:layout_marginTop="@dimen/nav_back_button_top"/>
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            app:cardCornerRadius="18dp"
+            android:id="@+id/cv_home_profile"
+            android:elevation="8dp">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/img_circle_profile"
+                android:id="@+id/iv_home_profile"
+                android:layout_gravity="center"/>
+        </androidx.cardview.widget.CardView>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -60,6 +68,7 @@
             android:textStyle="bold"
             android:textSize="@dimen/ts_14" />
         <TextView
+            style="@style/TextAppearance.Kamleon.Book"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/tv_home_last_sample"
@@ -77,22 +86,24 @@
             android:layout_marginBottom="200dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_home_profile"
+            app:layout_constraintTop_toBottomOf="@id/cv_home_profile"
             app:layout_constraintBottom_toBottomOf="parent" >
             <TextView
+                style="@style/TextAppearance.Kamleon.Book"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:id="@+id/lastMeasure"
                 android:text="0"
                 tools:text="0"
-                android:textSize="72sp" />
+                android:textSize="82sp" />
             <TextView
+                style="@style/TextAppearance.Kamleon.Book"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:text="@string/unit_percentage"
-                android:textSize="36sp"
+                android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="parent" />
         </LinearLayout>
 
@@ -120,7 +131,7 @@
             app:trackColor="@color/white40"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_home_profile"
+            app:layout_constraintTop_toBottomOf="@id/cv_home_profile"
             app:layout_constraintBottom_toBottomOf="parent" />
 
 <!--
@@ -167,38 +178,32 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:id="@+id/layoutContentQR"
-        android:background="@color/transparent"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.camera.view.PreviewView
+            android:id="@+id/cameraPreview"
+            android:layout_width="720dp"
+            android:layout_height="720dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="190dp"
-            android:src="@drawable/img_camera_rect"/>
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="@dimen/round_blue_button_height"
-            android:background="@drawable/bg_modal_btn_n"
-            android:paddingVertical="0dp"
-            android:textAllCaps="false"
-            android:id="@+id/btnSignIn"
-            android:text="@string/qr_scan_now"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+        <ImageView
+            android:layout_width="256dp"
+            android:layout_height="256dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginBottom="130dp"
-            android:textAppearance="@style/RoundBlueButtonTextStyle"
-            android:textColor="@drawable/color_text_button"
-            android:enabled="false"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="100dp"
+            android:src="@drawable/img_camera_rect"
+            android:importantForAccessibility="no"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
     <LinearLayout
         android:layout_width="0dp"
