--- a/KamleonApp/app/src/main/res/layout/fragment_scan_intro.xml
+++ b/KamleonApp/app/src/main/res/layout/fragment_scan_intro.xml
@@ -3,39 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_bottom_sheet_fragment"
     tools:context=".fragments.ScanIntroFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="48dp"
-        android:paddingTop="12dp"
-        android:gravity="center"
-        android:orientation="vertical">
-
+        android:layout_height="match_parent"
+        android:paddingTop="12dp">
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/img_bottom_sheet_line"/>
-        <TextView
+            android:id="@+id/iv_animation_qr"
             android:layout_width="match_parent"
+            android:layout_height="700dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/animation_qr_p"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+        <LinearLayout
+            android:id="@+id/ll_scan"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/CircularMediumFont"
-            android:textAlignment="center"
-            android:layout_marginTop="22dp"
-            android:textSize="@dimen/ts_16"
-            android:text="@string/qr_intro_text"
-            android:textColor="@color/white"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:gravity="top|center_horizontal"
+            android:orientation="vertical">
+            >
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="-1dp"
-            android:src="@drawable/img_scan_qr_intro"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/img_bottom_sheet_line"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="24dp"
+                style="@style/CircularMediumFont"
+                android:textAlignment="center"
+                android:layout_marginTop="22dp"
+                android:textSize="@dimen/ts_16"
+                android:text="@string/qr_intro_text"
+                android:textColor="@color/white"/>
+        </LinearLayout>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </FrameLayout>
