--- a/KamleonApp/app/src/main/res/layout/activity_analytic.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_analytic.xml
@@ -24,8 +24,8 @@
         android:visibility="gone"
         tools:visibility="visible"
         tools:text="Debug Text Style"
-        android:textAppearance="@style/TextAppearance.Kamleon.Headline6"
-        style="@style/TextStyle.Kamleon.Inverse"
+        android:fontFamily="@font/circular_pro"
+        android:textStyle="normal"
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -231,7 +231,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/Circular.Medium"
+                    android:textAppearance="@style/TextAppearance.Kamleon.Bold"
                     android:layout_marginTop="8dp"
                     android:text="@string/tab_home"
                     android:textSize="@dimen/ts_12"/>
@@ -261,7 +261,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/Circular.Medium"
+                    android:textAppearance="@style/TextAppearance.Kamleon.Bold"
                     android:layout_marginTop="8dp"
                     android:text="@string/tab_analytic"
                     android:textSize="@dimen/ts_12"/>
@@ -291,6 +291,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:textAppearance="@style/TextAppearance.Kamleon.Bold"
                     android:text="@string/tab_qr"
                     android:textSize="@dimen/ts_12"/>
             </LinearLayout>
