--- a/KamleonApp/app/src/main/res/layout/activity_pwd.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_pwd.xml
@@ -33,13 +33,12 @@
             style="@style/CircularBoldFont"
             android:layout_marginTop="16dp"
             android:textColor="@color/text_color_category"
-            android:text="@string/pwd_pwd"
+            android:text="@string/pwd_title"
             android:textSize="@dimen/ts_14"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="12dp"
             android:paddingVertical="8dp"
             android:orientation="vertical">
 
@@ -63,7 +62,7 @@
                         android:layout_height="wrap_content"
                         style="@style/CircularBoldFont"
                         android:textColor="@color/kamleon_dark_grey"
-                        android:text="@string/pwd_pwd"
+                        android:text="@string/pwd_password"
                         android:textSize="@dimen/ts_14"/>
                     <EditText
                         android:layout_width="0dp"
@@ -124,6 +123,14 @@
                         android:inputType="textPassword"
                         android:imeOptions="actionDone"
                         android:text=""/>
+                    <ImageView
+                        android:layout_width="@dimen/input_text_box_eye_width"
+                        android:layout_height="20dp"
+                        android:layout_marginStart="12dp"
+                        android:clickable="true"
+                        android:id="@+id/iv_pwd_new_eye"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/icn_eye_off"/>
                 </LinearLayout>
                 <View
                     android:layout_width="match_parent"
@@ -157,6 +164,14 @@
                         android:inputType="textPassword"
                         android:imeOptions="actionDone"
                         android:text=""/>
+                    <ImageView
+                        android:layout_width="@dimen/input_text_box_eye_width"
+                        android:layout_height="20dp"
+                        android:layout_marginStart="12dp"
+                        android:clickable="true"
+                        android:id="@+id/iv_pwd_confirm_eye"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/icn_eye_off"/>
                 </LinearLayout>
 
             </LinearLayout>
