--- a/KamleonApp/app/src/main/res/layout/activity_setting.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_setting.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/layoutHeader"
+        android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -18,8 +19,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:layout_centerVertical="true"
-            android:layout_marginVertical="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginStart="20dp"
             app:cardCornerRadius="18dp"
             android:id="@+id/cv_sett_bell"
@@ -51,8 +52,8 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginEnd="20dp"
-            android:layout_centerVertical="true"
-            app:cardCornerRadius="18dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="8dp"            app:cardCornerRadius="18dp"
             android:id="@+id/cv_sett_close"
             android:layout_alignParentEnd="true"
             android:elevation="20dp">
@@ -76,6 +77,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layoutHeader"
+        android:background="@color/white"
         app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
@@ -90,15 +92,21 @@
                 android:layout_height="76dp"
                 android:layout_gravity="center"
                 android:clickable="true">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/iv_sett_profile"
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerInParent="true"
-                    android:background="@color/transparent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/image_profile" />
+                    app:cardCornerRadius="38dp"
+                    android:id="@+id/cv_sett_profile"
+                    android:elevation="8dp">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/iv_sett_profile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/transparent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/image_profile" />
+                </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="26dp"
@@ -108,7 +116,7 @@
                     android:layout_marginEnd="2dp"
                     android:layout_marginBottom="2dp"
                     app:cardBackgroundColor="@color/white"
-                    app:cardCornerRadius="18dp"
+                    app:cardCornerRadius="13dp"
                     android:id="@+id/cv_sett_camera"
                     android:elevation="8dp">
 
@@ -128,10 +136,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginVertical="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="12dp"
                 android:textAppearance="@style/TextAppearance.Kamleon.Headline5"
-
-                tools:text="Cèlia Marquès" />
+                tools:text="Kamleon Owner" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -285,6 +293,7 @@
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:orientation="horizontal"
+                        android:layout_marginTop="6dp"
                         android:paddingHorizontal="@dimen/setting_item_padding_h">
 
                         <TextView
@@ -353,7 +362,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="14dp"
                     android:background="@drawable/bg_pref_container_shadow"
                     android:orientation="vertical"
                     android:paddingHorizontal="@dimen/setting_category_content_padding">
@@ -371,7 +380,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="14dp"
                     android:background="@drawable/bg_pref_container_shadow"
                     android:orientation="vertical"
                     android:paddingHorizontal="@dimen/setting_category_content_padding">
@@ -390,7 +399,7 @@
                     style="@style/CircularBoldFont"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="12dp"
                     android:paddingHorizontal="8dp"
                     android:text="@string/setting_desc_acc1"
                     android:textColor="@color/kamleon_secondary_grey_50"
@@ -399,7 +408,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="14dp"
                     android:background="@drawable/bg_pref_container_shadow"
                     android:orientation="vertical"
                     android:paddingHorizontal="@dimen/setting_category_content_padding">
@@ -415,13 +424,13 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/CircularBoldFont"
+                    android:textAppearance="@style/TextAppearance.Kamleon.Book"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="12dp"
                     android:paddingHorizontal="8dp"
                     android:text="@string/setting_desc_acc2"
-                    android:textColor="@color/kamleon_secondary_grey_50"
+                    android:textColor="@color/kamleon_secondary_grey_60"
                     android:textSize="@dimen/ts_12" />
 
                 <TextView
@@ -436,7 +445,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="14dp"
                     android:background="@drawable/bg_pref_container_shadow"
                     android:orientation="vertical"
                     android:paddingHorizontal="@dimen/setting_category_content_padding">
@@ -448,7 +457,8 @@
                         app:settingRightArrow="true"
                         app:settingRightSwitch="false"
                         app:settingTypeLabel="@string/setting_label_user_weight"
-                        app:settingTypeValue="45.0kg" />
+                        app:settingTypeValue="" />
+<!--                    app:settingTypeValue="@string/setting_label_user_weight_text" />-->
 
                     <View
                         android:layout_width="match_parent"
@@ -463,7 +473,8 @@
                         app:settingRightArrow="true"
                         app:settingRightSwitch="false"
                         app:settingTypeLabel="@string/setting_label_user_height"
-                        app:settingTypeValue="160.0 cm" />
+                        app:settingTypeValue="" />
+<!--                    app:settingTypeValue="@string/setting_label_user_height_text" />-->
 
                     <View
                         android:layout_width="match_parent"
@@ -497,10 +508,10 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/CircularBoldFont"
+                    android:textAppearance="@style/TextAppearance.Kamleon.Book"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="12dp"
                     android:paddingHorizontal="8dp"
                     android:text="@string/setting_desc_pref1"
                     android:textColor="@color/kamleon_secondary_grey_50"
@@ -511,14 +522,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="36dp"
-                    android:text="@string/setting_label_acc_info"
+                    android:text="@string/setting_label_info"
                     android:textColor="@color/kamleon_dark_grey"
                     android:textSize="@dimen/ts_14" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="14dp"
                     android:background="@drawable/bg_pref_container_shadow"
                     android:orientation="vertical"
                     android:paddingHorizontal="@dimen/setting_category_content_padding">
@@ -536,7 +547,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="14dp"
                     android:background="@drawable/bg_pref_container_shadow"
                     android:orientation="vertical"
                     android:paddingHorizontal="@dimen/setting_category_content_padding"
@@ -782,7 +793,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="14dp"
                     android:background="@drawable/bg_pref_container_shadow"
                     android:orientation="vertical"
                     android:paddingHorizontal="@dimen/setting_category_content_padding">
@@ -798,10 +809,10 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/CircularBoldFont"
+                    android:textAppearance="@style/TextAppearance.Kamleon.Book"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="12dp"
                     android:paddingHorizontal="8dp"
                     android:text="@string/setting_desc_pref2"
                     android:textColor="@color/kamleon_secondary_grey_50"
@@ -819,7 +830,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="14dp"
                     android:background="@drawable/bg_pref_container_shadow"
                     android:orientation="vertical"
                     android:paddingHorizontal="@dimen/setting_category_content_padding">
@@ -850,10 +861,10 @@
                 </LinearLayout>
 
                 <TextView
-                    style="@style/CircularBoldFont"
+                    android:textAppearance="@style/TextAppearance.Kamleon.Book"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="12dp"
                     android:paddingHorizontal="8dp"
                     android:text="@string/setting_desc_pref3"
                     android:textColor="@color/kamleon_secondary_grey_50"
