--- a/KamleonApp/app/src/main/res/values/colors.xml
+++ b/KamleonApp/app/src/main/res/values/colors.xml
@@ -40,7 +40,7 @@
 
     <color name="kamleon_blue_pressed">#882FD5CB</color>
 
-    <color name="kamleon_dark_grey">#FF221E1E</color>
+    <color name="kamleon_dark_grey">#221E1E</color>
     <color name="kamleon_dark_grey_50">#88221E1E</color>
 
     <color name="kamleon_secondary_grey_70">#414042</color>
