--- a/KamleonApp/app/src/main/res/layout/activity_tab.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_tab.xml
@@ -20,19 +20,51 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/tab_nav" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/layoutContentQR"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.camera.view.PreviewView
+            android:id="@+id/cameraPreview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+        <ImageView
+            android:layout_width="256dp"
+            android:layout_height="256dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="100dp"
+            android:src="@drawable/img_camera_rect"
+            android:importantForAccessibility="no"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="93dp"
+        android:layout_height="wrap_content"
         android:id="@+id/tabContainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="24dp"
         android:paddingVertical="0dp"
         android:paddingHorizontal="0dp"
         android:weightSum="3"
-        android:background="@drawable/bg_tab"
+        android:background="@drawable/bg_tab_shape"
         android:orientation="horizontal">
         <LinearLayout
             android:layout_width="0dp"
@@ -40,7 +72,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:id="@+id/layoutTabHome"
-            android:background="@drawable/bg_tab_button_shadow"
+            android:background="@drawable/bg_tab_shape"
             android:clickable="true"
             android:orientation="vertical">
 
@@ -123,4 +155,5 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
