--- a/KamleonApp/app/src/main/res/navigation/login_nav.xml
+++ b/KamleonApp/app/src/main/res/navigation/login_nav.xml
@@ -3,8 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_nav"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/splashFragment">
 
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.dynatech2012.kamleonuserapp.fragments.SplashFragment"
+        android:label="activity_splash"
+        tools:layout="@layout/activity_splash" >
+        <action
+            android:id="@+id/action_splashFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.dynatech2012.kamleonuserapp.fragments.LoginFragment"
